kubernetes/kube-system/cilium-metrics.yaml
---
# Cilium operator metrics service
apiVersion: v1
kind: Service
metadata:
  name: cilium-operator-metrics
  namespace: kube-system
  labels:
    app.kubernetes.io/name: cilium-operator
spec:
  ports:
    - name: prometheus
      port: 9963
      targetPort: 9963
  selector:
    app.kubernetes.io/name: cilium-operator
