kubernetes/kube-system/hubble-ui-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui-tailscale
  namespace: kube-system
  annotations:
    tailscale.com/hostname: "hubble"
    tailscale.com/proxy-class: "standard"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
  tls:
    - hosts:
        - hubble
